--- a/ivan_scripts/P-median distances Tata_upd.ipynb
+++ b/ivan_scripts/P-median distances Tata_upd.ipynb
@@ -1110,7 +1110,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transport_flows",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
